# solana-accountsdb-plugin-postgres

./: Cargo.toml
scripts/: create_schema.sql  geyser.json  reset_schema.sh
src/: accountsdb_plugin_postgres.rs  postgres_client.rs
src/postgres_client/: postgres_client_block_metadata.rs  postgres_client_transaction.rs
tests/: test_postgres_plugin.rs
