[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-accountsdb-plugin-postgres"
description = "The Solana AccountsDb plugin for PostgreSQL database."
version = "2.0.10"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
log = "0.4.14"
openssl = { version = "0.10" }
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.2", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
solana-account-decoder = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}

solana-logger = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-measure = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-metrics = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-runtime = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-program = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-zk-token-sdk = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"} 
solana-sdk = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-transaction-status = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}


thiserror = "1.0.30"
tokio-postgres = "0.7.12"

[dev-dependencies]
libc = "0.2.112"
libloading = "0.7.2"
serial_test = "0.5.1"
solana-account-decoder = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-core = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-local-cluster = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-net-utils = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-streamer= {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
tempfile = "3.2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[patch.crates-io]
curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }

solana-curve25519 = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-program = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-zk-sdk = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}
solana-zk-token-sdk = {git = "https://github.com/lijunwangs/solana.git", rev = "3bfbd304b469c0d79782bedb5e4420b78dda24fe"}